syntax = "proto3";

package meteroid.metering.v1;

import "models.proto";

message IngestRequest {
  repeated Event events = 1;
  // allow ingesting events with a timestamp in the past (with a larger diff than the grace period)
  bool allow_backfilling = 2;
}


message IngestResponse {
  repeated IngestFailure failures = 1;
}

service EventsService {
  rpc Ingest(IngestRequest) returns (IngestResponse);
  // TODO amend/deprecate event (audit safe, mark as ignored + ingest new one)
}
